Add new CheckIfRegisteredTest (fails for weird reasons), delete CollectVars tests, run formatter